<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">三少医美</string>
    <string name="error_network">网络异常，请稍后再试</string>
    <string name="no_more_product">没有更多商品了</string>
    <string name="no_more_evatuate">没有更多评论了</string>
    <string name="no_more_evatuate_product">没有更多待评价商品了</string>
    <string name="no_more_message">没有更多消息了</string>
    <string name="no_more_order">没有更多订单了</string>
    <string name="empty_evaluate_productlist">哇，你的评价效率真高！</string>
    <string name="empty_message">“暂无消息”</string>
    <string name="empty_evaluate_list">“暂无评论”</string>
    <string name="empty_order_list">“还没有订单，快去逛逛吧”</string>
    <string name="empty_order_zp">“暂无直拼信息”</string>
    <string name="empty_shopping_car">“快去挑选健康好物吧”</string>
    <string name="colon">:</string>
    <string name="message_dialog_sure">确认</string>
    <string name="more_title">更多</string>
    <string name="all_title">查看全部</string>
    <string name="reset">重置</string>
    <string name="login_title">欢迎来到三少医美</string>
    <string name="login_tip">首次登录将自动为您创建账号</string>
    <string name="reset_pwd_tip">重新设置账号密码，请保管好您的密码</string>
    <string name="input_mobile_hint">请输入手机号</string>
    <string name="input_code_hint">请输入验证码</string>
    <string name="input_login_pwd_hint">请输入密码（8-20位）</string>
    <string name="input_new_pwd_hint">请输入新密码</string>
    <string name="input_old_pwd_hint">请输入旧密码</string>
    <string name="input_new_pwd_again_hint">请再次输入新密码</string>
    <string name="input_pwd_format_tip">8-20位，同时包含大小英文字母和数字</string>
    <string name="send_code_tip">发送验证码</string>
    <string name="re_send_code">重新发送</string>
    <string name="second_text">s</string>
    <string name="pwd_login">密码登录</string>
    <string name="code_login">验证码登录</string>
    <string name="pwd_reset">重置密码</string>
    <string name="login_agree_tip">未注册将为您创建并视为同意</string>
    <string name="login_protocol_tip">用户协议</string>
    <string name="and">和</string>
    <string name="login_privacy_tip">隐私政策</string>
    <string name="login">登录</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="bind_phone_title">绑定手机号</string>
    <string name="bind_phone_tip">将自动绑定第三方账号</string>
    <string name="sure_bind">确定绑定</string>
    <string name="next">下一步</string>
    <string name="reset_pwd">重置密码</string>
    <string name="order_cancel_tip">1、此订单所产生的返现收益将自动退回。\n2、此订单所使用猩球抵用券将自动退回。\n 3、修改退款申请或联系致电三少平台客服</string>
    <string name="orderinfo_title">订单详情</string>
    <string name="orderinfo_ordernum">订单编号</string>
    <string name="orderinfo_ordertime">创建时间</string>
    <string name="orderinfo_paytype">支付方式</string>
    <string name="orderinfo_paytime">支付时间</string>
    <string name="orderinfo_totalprice">商品总额"</string>
    <string name="orderinfo_freight">运费</string>
    <string name="orderinfo_actualprice">实付：</string>
    <string name="orderinfo_copy">复制</string>
    <string name="copy_success">复制成功</string>
    <string name="orderinfo_status_waitpay">等待支付</string>
    <string name="orderinfo_status_tradeclose">交易关闭</string>
    <string name="orderinfo_status_tradeclose_desc">感谢您使用三少医美，期待再次为您服务。</string>
    <string name="again_buy_success">已添加购物车，请至购物车中下单购买</string>
    <string name="orderinfo_status_undelivered_desc">订单正在处理中，请耐心等待。</string>
    <string name="orderinfo_status_delivered_desc">订单已经在路上，请耐心等待。</string>
    <string name="dialog_conform_receipt_title">确认收货</string>
    <string name="dialog_conform_receipt_desc">请确认您的订单已签收，确认订单后金额将转入三少医美。</string>
    <string name="dialog_conform_receipt_no">我再看看</string>
    <string name="dialog_conform_receipt_yes">确认收货</string>
    <string name="logisticsInfo_title">物流详情</string>
    <string name="create_order_title">填写订单</string>
    <string name="click_add_address">点击添加地址</string>
    <string name="payment_title">收银台</string>
    <string name="pay_price">支付金额</string>
    <string name="alipay_pay">支付宝支付</string>
    <string name="weixin_pay">微信支付</string>
    <string name="immediately_pay">立即支付</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_fail">支付失败</string>
    <string name="pay_fail_tip">请在30分钟内完成支付</string>
    <string name="pay_fail_tip_five">请在5分钟内完成支付</string>
    <string name="pay_actual_price">实付款</string>
    <string name="look_detail">查看详情</string>
    <string name="goon_shopping">继续逛逛</string>
    <string name="user_title">我的</string>
    <string name="order_title">我的订单</string>
    <string name="order_all">全部</string>
    <string name="order_nopay">待付款</string>
    <string name="order_undelivered">待发货</string>
    <string name="order_delivered">已发货</string>
    <string name="order_evaluated">待评价</string>
    <string name="order_finished">已完成</string>
    <string name="evaluate_title">评价晒单</string>
    <string name="rating_bar1">非常不满</string>
    <string name="rating_bar2">吐槽</string>
    <string name="rating_bar3">一般</string>
    <string name="rating_bar4">满意</string>
    <string name="rating_bar5">非常满意</string>
    <string name="input_evaluate_content_tip">填写高质量的评价，有可能会被选为体验官噢~</string>
    <string name="commit">提交</string>
    <string name="evaluate_content_max_tip">最多输入500个字</string>
    <string name="evaluate_content_min_tip">请最少输入5个字</string>
    <string name="evaluate_success">评论成功</string>
    <string name="upload_pic_fail">上传失败，请重试</string>
    <string name="evaluate_select_pic">图片选择</string>
    <string name="userinfo_title">个人信息</string>
    <string name="repalce_phone">更换头像</string>
    <string name="take">拍照</string>
    <string name="gallery">从手机相册选择</string>
    <string name="nick_name">昵称</string>
    <string name="modify_nick_name">修改昵称</string>
    <string name="nick_name_format">支持2-32字符</string>
    <string name="input_nick_name">请输入您的昵称</string>
    <string name="sex_name">性别</string>
    <string name="select_sex">选择性别</string>
    <string name="sex_female">女</string>
    <string name="sex_male">男</string>
    <string name="birthday_name">生日</string>
    <string name="input_birthday">填写生日</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="address_title">地址管理</string>
    <string name="empty_address">“还没有地址，去添加吧”</string>
    <string name="new_address_title">新建地址</string>
    <string name="edit_address_title">编辑地址</string>
    <string name="delete_title">删除</string>
    <string name="address_name">收件人</string>
    <string name="input_address_name_tip">请填写收货人姓名</string>
    <string name="input_address_name_errorformat_tip">联系人姓名长度需要在2-10个字符之间</string>
    <string name="address_phone">手机号</string>
    <string name="input_address_phone_tip">请填写联系人手机号</string>
    <string name="input_address_phone_error_tip">请填写正确手机号</string>
    <string name="address_area">所在地区</string>
    <string name="input_address_area_tip">省份、城市、区县等</string>
    <string name="input_address_area_empty_tip">请选择省市区</string>
    <string name="address_detail">详细地址</string>
    <string name="input_address_detail_tip">街道、楼牌号等</string>
    <string name="input_address_detail_errorformat_tip">详细地址长度不低于4个字符</string>
    <string name="address_label">选择标签</string>
    <string name="address_label_home">家</string>
    <string name="address_label_school">学校</string>
    <string name="address_label_company">公司</string>
    <string name="set_address_default">设为默认地址</string>
    <string name="address_save">保存</string>
    <string name="delete_address_title">删除地址</string>
    <string name="delete_address_desc">删除当前地址，后续可重新添加。</string>
    <string name="delete_address_no">点错了</string>
    <string name="delete_address_yes">确认删除</string>
    <string name="feed_title">意见反馈</string>
    <string name="feed_content">反馈内容</string>
    <string name="input_feed_content_tip">请描述您目前遇到的问题，非常感谢</string>
    <string name="contact_way">联系方式</string>
    <string name="input_contact_way_tip">请留下您的手机号、微信号或邮箱，以便我们与您取得联系</string>
    <string name="commit_feed">提交反馈</string>
    <string name="setting_title">设置</string>
    <string name="privacy_agreement">平台用户隐私协议</string>
    <string name="red_packet_agreement">红包使用协议</string>
    <string name="member_agreement">芙蓉会粉丝协议</string>
    <string name="about_us">关于我们</string>
    <string name="user_agreement">用户协议</string>
    <string name="clear_cache">清除缓存</string>
    <string name="contact_us">联系我们</string>
    <string name="safe_center_title">安全中心</string>
    <string name="replace_phone">更换手机号码</string>
    <string name="is_replace_phone">是否更换手机号码</string>
    <string name="dialog_replace_phone_yes">确认更换</string>
    <string name="dialog_replace_phone_no">暂不更换</string>
    <string name="set_login_pwd">设置登录密码</string>
    <string name="modify_login_pwd">修改登录密码</string>
    <string name="set_pay_pwd">设置支付密码</string>
    <string name="pay_pwd">支付密码</string>
    <string name="modify_pay_pwd">修改支付密码</string>
    <string name="forget_pay_pwd">忘记支付密码</string>
    <string name="replace_phone_next_step">下一步，绑定新号码</string>
    <string name="phone_format_error_tip">手机号格式不对</string>
    <string name="send_success">发送成功</string>
    <string name="input_new_phone_tip">请输入新的手机号码</string>
    <string name="two_pwd_differ_tip">密码不一致，请重新确认一下哦~</string>
    <string name="input_old_pay_pwd_tip">请输入旧支付密码</string>
    <string name="again_input_pay_pwd_tip">请再次输入支付密码</string>
    <string name="input_pay_pwd_format_tip">请输入6位支付密码\n注意不要重复或连续数字</string>
    <string name="set_pay_pwd_success">支付密码设置成功</string>
    <string name="modify_pay_pwd_success">支付密码修改成功</string>
    <string name="shoppingcar_title">购物车</string>
    <string name="editor">编辑</string>
    <string name="select_all">全选</string>
    <string name="account">结算</string>
    <string name="finish">完成</string>
    <string name="noselect_account">结算（0）</string>
    <string name="account_with_brackets">结算（</string>
    <string name="delete_with_brackets">删除（</string>
    <string name="product_changed_tip">商品发生变化，请重新检查一下吧</string>
    <string name="is_setting_pay_pwd">设置支付密码</string>
    <string name="is_setting_pay_pwd_desc">为保障您的账号支付安全请设置支付密码，否则将无法继续进行支付</string>
    <string name="dialog_set_paypwd_yes">去设置</string>
    <string name="dialog_set_paypwd_no">暂不设置</string>
    <string name="message_title">消息</string>
    <string name="message_red_packet">红包消息</string>
    <string name="message_notice">通知消息</string>
    <string name="message_transaction_logistics">交易物流</string>
    <string name="red_packet_title">可用红包</string>
    <string name="red_packet_settled_title">待结算红包</string>
    <string name="red_packet_voucher">红包抵用券</string>
    <string name="copy_title">复制给好友</string>
    <string name="invite_friend_tip">分享邀请好友</string>
    <string name="user_bind_invite">绑定邀请人</string>
    <string name="user_bind_invite_jump_add">请与您的邀请人确认邀请ID</string>
    <string name="user_bind_invite_input_id">请输入邀请人ID</string>
    <string name="user_bind_invite_sure">确认绑定</string>
    <string name="user_bind_invite_sure_men">确认邀请人</string>
    <string name="bind_re_write">重新填写</string>
    <string name="user_not_bind_invite">暂不绑定</string>
    <string name="user_bind_invite_go_on">继续</string>
    <string name="user_bind_invite_go_on_bind">继续绑定</string>
    <string name="common_warm_tip">温馨提示</string>
    <string name="user_bind_back_tip">跳过此步后，购买礼包时可以再次绑定邀请人ID</string>
    <string name="bind_jump">跳过</string>
    <string name="remark_input_limit">输入的内容不能超过50个字</string>
    <string name="create_team_name">群名称</string>
    <string name="et_max_input_10">请输入，最多10个字</string>
    <string name="et_max_input_14">非必填，最多14个字</string>
    <string name="et_max_input_30">非必填，最多30个字</string>
    <string name="im_team_introduce">群组介绍</string>
    <string name="must_write_tag">*</string>
    <string name="im_team_announce">群公告</string>
    <string name="im_create_team">创建群组</string>
    <string name="im_message">验证消息</string>
    <string name="im_find_new_team">查找新群组</string>
    <string name="im_join_team">我加入的群组</string>
</resources>