<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="cn.sancell.xingqiu.homeuser.UserFeedActivity">

    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/feed_content"
        android:textColor="@color/color_text1"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ed_feed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_tip"
        android:layout_marginTop="10dp"
        android:background="@drawable/caccca_stroke1"
        android:gravity="top"
        android:hint="@string/input_feed_content_tip"
        android:maxLength="500"
        android:minLines="11"
        android:padding="8dp"
        android:textColorHint="@color/color_text3"
        android:textSize="@dimen/sp_12" />

    <TextView
        android:id="@+id/tv_tip1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed_feed"
        android:layout_marginTop="30dp"
        android:text="@string/contact_way"
        android:textColor="@color/color_text1"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ed_contact"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/tv_tip1"
        android:layout_marginTop="10dp"
        android:background="@drawable/caccca_stroke1"
        android:gravity="center_vertical"
        android:hint="@string/input_contact_way_tip"
        android:maxLength="32"
        android:maxLines="1"
        android:paddingLeft="7dp"
        android:textColorHint="@color/color_text3"
        android:textSize="@dimen/sp_12" />

    <TextView
        android:id="@+id/tv_commit_feed"
        style="@style/address_btn"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/commit_feed" />

</RelativeLayout>
