<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context=".login.ResetPwdFirstStepActivity">

    <View
        android:id="@+id/empty"
        android:layout_width="375dp"
        android:layout_height="80dp" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:paddingRight="20dp"
        android:src="@mipmap/icon_black_back_nopadding" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_pwd"
        android:layout_below="@+id/empty"
        android:textColor="@color/color_text1"
        android:textSize="@dimen/sp_28" />

    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_marginTop="6dp"
        android:includeFontPadding="false"
        android:text="@string/reset_pwd_tip"
        android:textColor="@color/color_7E807E"
        android:textSize="@dimen/sp_13" />

    <include
        layout="@layout/layout_phone_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/btn_next"
        style="@style/login_btn"
        android:layout_below="@+id/view_line1"
        android:layout_marginTop="40dp"
        android:text="@string/next" />


</RelativeLayout>